* Text subtitles: When rendering to the video frame, clip subtitles that go out of the frame
* Ticket #4144, Move the user interface language selection to the Options dialog and remove the "Language" menu.
  The increasing number of translations had reduced the usability of the menu
* Updated Little CMS to v2.6 (git 4da8703)
* Updated Unrar to v5.1.4
* Updated LAV Filters to v0.61.2.14:
    - Ticket #3575, LAV Splitter: Alternate audio support for HLS
    - Ticket #4326, LAV Splitter: No subtitles were displayed when using the special "Forced subtitles" track created for PGS subtitles
    - LAV Video: Support VP7 video
    - LAV Video: Use the MediaFondation WMV decoder on Windows 7+ instead of the DMO WMV decoder
* Updated Armenian, Basque, Belarusian, Bengali, British English, Catalan, Chinese (simplified and traditional), Croatian,
  Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay, Polish, Portuguese (Brazil),
  Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Turkish, Ukrainian and Vietnamese translations
* Don't use auto-zoom feature when the window was positioned using the Aero Snap
* Don't exit fullscreen when loosing focus to a window on the same monitor
! The dockable bars were not updated when changing the UI language
! Statusbar: Fixed occasional flickering of text and media type icon
! D3D Fullscreen last state was inverted and wasn't properly restored with "Remember last window size and position" option
! D3D Fullscreen produced invisible window for audio-only files
! Ticket #34, VSFilter/ISR: Override placement feature was not working even if enabled
! Ticket #1411, Internal Subtitle Renderer/VSFilter: Support loading external PGS subtitles
! Ticket #1574/#4171, ISR: Subtitle positioning was wrong when using default style override
! Ticket #2244, ISR: Changes in subresync bar were lost after changing style
! Ticket #2671, VSFilter: Video frames were not marked as interlaced